@@ -791,4 +791,4 @@ in the web browser the doc for the heap method one can do:
       <pre>
 &gt;&gt;&gt; hp.doc.heap[0]
 </pre></dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 14:54:11 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 15:28:55 2009</div></body></html>
