@@ -500,4 +500,4 @@ unspecified whether this returned copy is mutable or immutable.
  a hash value based on the addresses of the elements.
 
 </dt></dl></dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 14:54:10 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 15:28:55 2009</div></body></html>
